fix(button-dropdown): Broken styles on reply/reply-all button dropdown

--- a/static/components/button-dropdown.less
+++ b/static/components/button-dropdown.less
@@ -21,6 +21,7 @@
       height: 32px;
       padding-top: 7px;
       line-height: 18px;
+      border-radius: 4px 0 0 4px;
     }
   }
 
@@ -65,7 +66,7 @@
     line-height: 14px;
     position: absolute;
     right: -1px; // -1, because of the border above
-
+    white-space:nowrap;
     display:none;
 
     .menu {
